nerf-desktop-yaml-files/nerf-gui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rw-nerf-desktop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nerf
  template:
    metadata:
      labels:
        app: nerf
    spec:
      hostname: egl
      containers:
      - name: egl
        image: ghcr.io/selkies-project/nvidia-egl-desktop:latest
        stdin: true
        tty: true
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          limits:
            memory: 64Gi
            cpu: "16"
            nvidia.com/gpu: 1
          requests:
            memory: 16Gi
            cpu: 100m
            nvidia.com/gpu: 1
        volumeMounts:
        - mountPath: /dev/shm
          name: dshm
        - mountPath: /cache
          name: egl-cache-vol
        - mountPath: /home/user/persistent
          name: egl-root-vol
      dnsPolicy: None
      dnsConfig:
        nameservers:
        - 8.8.8.8
        - 8.8.4.4
      volumes:
      - name: dshm
        emptyDir:
          medium: Memory
      - name: egl-cache-vol
        persistentVolumeClaim:
          claimName: nerf-cache
      - name: egl-root-vol
        persistentVolumeClaim:
          claimName: nerf-storage
#        persistentVolumeClaim:
#          claimName: egl-root-vol
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: nvidia.com/gpu.product
                operator: In
                values:
                - NVIDIA-RTX-A6000
                - NVIDIA-GeForce-RTX-4090
                - NVIDIA-GeForce-RTX-3090
                - NVIDIA-A100-SXM4-80GB
                - NVIDIA-A100-SXM4-80GB-MIG-1g.10gb
                - NVIDIA-A100-PCIE-40GB
                - NVIDIA-A100-80GB-PCIe
                - NVIDIA-A100-80GB-PCIe-MIG-1g.10gb
              
      # affinity:
      #   nodeAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       nodeSelectorTerms:
      #       - matchExpressions:
      #         - key: kubernetes.io/hostname
      #           operator: In
      #           values:
      #           - k8s-gpu-1.ucsc.edu
      #           - k8s-gpu-2.ucsc.edu
      #           - k8s-gpu-3.ucsc.edu
      #           - k8s-gpu-4.ucsc.edu
      #           - k8s-gpu-5.ucsc.edu
      #         - key: nvidia.com/gpu.product
      #           operator: In
      #           values:
      #           - NVIDIA-RTX-A6000
      tolerations:
      - effect: NoSchedule
        key: nautilus.io/gilpin-lab
        operator: Exists
# Command to run before creating deployment: mypass is the password for entry, Quotations is turn-shared-secret
# kubectl create secret generic my-pass --from-literal=my-pass=mypass --from-literal=turn-secret="cup5dBCknRijK4roVJSEUFikEpu8xdKAqGxubX7CbZ2YkpgC4zFsU5Ukqf97PHsE"
